@@ -3,6 +3,7 @@ plugins {
     alias(libs.plugins.kotlin.android)
     alias(libs.plugins.ksp)
     alias(libs.plugins.hilt)
+    id("org.jetbrains.dokka") version "1.8.20"
 }
 
 android {
@@ -42,10 +43,18 @@ android {
     buildFeatures {
         compose = true
     }
+
+    testOptions {
+        unitTests.isIncludeAndroidResources = true // opsional
+
+    }
 }
 
-dependencies {
 
+
+
+dependencies {
+    dokkaHtmlPlugin("org.jetbrains.dokka:android-documentation-plugin:1.8.20")
     implementation(libs.androidx.core.ktx)
     implementation(libs.androidx.lifecycle.runtime.ktx)
     implementation(libs.androidx.activity.compose)
@@ -66,10 +75,38 @@ dependencies {
     implementation(libs.kotlinx.coroutines.android)
     implementation(libs.androidx.datastore.preferences)
     testImplementation(libs.junit)
+    testImplementation(libs.kotlin.test)
+    testImplementation(libs.kotlinx.coroutines.test)
+    testImplementation(libs.junit)
+    testImplementation(libs.mockk)
+    testImplementation(libs.mockito.core)
+    testImplementation(libs.mockito.inline)
+    testImplementation(libs.mockito.kotlin)
+    testImplementation(libs.assertj.core)
+    testImplementation(libs.truth)
+    testImplementation(libs.junit.jupiter)
+    testImplementation(libs.junit.jupiter.api)
+    testImplementation(libs.mockito.junit.jupiter)
+    testImplementation(libs.androidx.core.testing)
+    testRuntimeOnly(libs.junit.jupiter.engine)
+    androidTestImplementation (libs.room.testing)
     androidTestImplementation(libs.androidx.junit)
     androidTestImplementation(libs.androidx.espresso.core)
     androidTestImplementation(libs.ui.test.junit4)
+    androidTestImplementation (libs.androidx.core.testing)
+    androidTestImplementation (libs.androidx.rules)
     debugImplementation(libs.ui.tooling)
     debugImplementation(libs.ui.test.manifest)
 
+}
+
+
+tasks.withType<Test>().configureEach {
+    jvmArgs = jvmArgs.orEmpty() + listOf("-XX:+EnableDynamicAgentLoading")
+    useJUnitPlatform()
+
+    testLogging {
+        events("passed", "skipped", "failed")
+        exceptionFormat = org.gradle.api.tasks.testing.logging.TestExceptionFormat.FULL
+    }
 }
